import API from '../../../API';
import { testActionSnapshotWithFixtures } from '../../../common/testHelpers';
import {
  getResults,
  resetData,
  initialUpdate,
  updateDisability,
} from '../AutoCompleteActions';
import {
  APIFailMock,
  APISuccessMock,
  searchQuery,
  controller,
  trigger,
  url,
  id,
} from '../AutoComplete.fixtures';

jest.mock('lodash/debounce', () => jest.fn(fn => fn));
jest.mock('../../../API');

const loadResults = (requestParams, serverMock) => {
  API.get.mockImplementation(serverMock);

  return getResults(requestParams);
};

const fixtures = {
  'should update store with initial data': () =>
    initialUpdate({
      searchQuery: 'searchQuery',
      controller,
      url,
      isDisabled: false,
      id,
    }),

  'should load results and success': () =>
    loadResults(
      {
        url,
        searchQuery,
        controller,
        trigger,
        id,
      },
      async () => APISuccessMock
    ),

  'should load results and fail': () =>
    loadResults(
      {
        url,
        searchQuery: 'x = y',
        controller,
        trigger,
        id,
      },
      async () => APIFailMock
    ),

  'should reset-data': () => resetData({ controller, id }),

  'should update disability': () => updateDisability(true, id),
};

describe('AutoComplete actions', () =>
  testActionSnapshotWithFixtures(fixtures));
