// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete actions should load results and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "id": "search-input",
        "searchQuery": "x = y",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
        "url": "models/auto_complete_search?search=",
      },
      "type": "AUTO_COMPLETE_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "error": "oops",
        "id": "search-input",
        "results": Array [],
        "status": "ERROR",
      },
      "type": "AUTO_COMPLETE_FAILURE",
    },
  ],
]
`;

exports[`AutoComplete actions should load results and success 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "id": "search-input",
        "searchQuery": "",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
        "url": "models/auto_complete_search?search=",
      },
      "type": "AUTO_COMPLETE_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "id": "search-input",
        "results": Array [
          Object {
            "category": "category",
            "label": "some results",
          },
        ],
        "searchQuery": "",
        "status": "RESOLVED",
        "trigger": "INPUT_CHANGE",
        "url": "models/auto_complete_search?search=",
      },
      "type": "AUTO_COMPLETE_SUCCESS",
    },
  ],
]
`;

exports[`AutoComplete actions should reset-data 1`] = `
Object {
  "payload": Object {
    "controller": "models",
    "id": "search-input",
    "trigger": "RESET",
  },
  "type": "AUTO_COMPLETE_RESET",
}
`;

exports[`AutoComplete actions should update disability 1`] = `
Object {
  "payload": Object {
    "id": "search-input",
    "isDisabled": true,
  },
  "type": "AUTO_COMPLETE_DISABLED_CHANGE",
}
`;

exports[`AutoComplete actions should update store with initial data 1`] = `
Object {
  "payload": Object {
    "controller": "models",
    "error": undefined,
    "id": "search-input",
    "isDisabled": false,
    "results": Array [],
    "searchQuery": "searchQuery",
    "status": "RESOLVED",
    "trigger": "COMPONENT_DID_MOUNT",
    "url": "models/auto_complete_search?search=",
  },
  "type": "AUTO_COMPLETE_SUCCESS",
}
`;
